--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pack/my-plugins/start/vimtex"]
 	path = pack/my-plugins/start/vimtex
 	url = https://github.com/lervag/vimtex.git
+[submodule "pack/my-plugins/start/ctrlp"]
+	path = pack/my-plugins/start/ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
