--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pack/my-plugins/start/ctrlp"]
 	path = pack/my-plugins/start/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "pack/my-plugins/start/nerdtree"]
+	path = pack/my-plugins/start/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
