--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "pack/my-plugins/start/nerdtree"]
 	path = pack/my-plugins/start/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "pack/my-plugins/start/vim-fugitive"]
+	path = pack/my-plugins/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
