--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "pack/my-plugins/start/vim-fugitive"]
 	path = pack/my-plugins/start/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "pack/my-plugins/start/ultisnips"]
+	path = pack/my-plugins/start/ultisnips
+	url = https://github.com/SirVer/ultisnips.git
